turbopack/crates/turbo-tasks-macros-tests/tests/derive_resolved_value/fail_simple_unnamed_struct.stderr
error[E0277]: the trait bound `UnresolvedValue: ResolvedValue` is not satisfied
 --> tests/derive_resolved_value/fail_simple_unnamed_struct.rs:8:39
  |
8 | struct ContainsUnresolvedValueUnnamed(UnresolvedValue);
  |                                       ^^^^^^^^^^^^^^^ the trait `ResolvedValue` is not implemented for `UnresolvedValue`
  |
  = help: the following other types implement trait `ResolvedValue`:
            &T
            &mut T
            ()
            (A, Z, Y, X, W, V, U, T)
            (B, A, Z, Y, X, W, V, U, T)
            (C, B, A, Z, Y, X, W, V, U, T)
            (D, C, B, A, Z, Y, X, W, V, U, T)
            (E, D, C, B, A, Z, Y, X, W, V, U, T)
          and $N others
note: required by a bound in `DeriveResolvedValueAssertion::assert_impl_ResolvedValue`
 --> tests/derive_resolved_value/fail_simple_unnamed_struct.rs:7:10
  |
7 | #[derive(ResolvedValue)]
  |          ^^^^^^^^^^^^^ required by this bound in `DeriveResolvedValueAssertion::assert_impl_ResolvedValue`
  = note: this error originates in the derive macro `ResolvedValue` (in Nightly builds, run with -Z macro-backtrace for more info)
